--- a/TXDLib/Heavy.TXDLib.csproj
+++ b/TXDLib/Heavy.TXDLib.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{3C60D5B5-73E2-4E0A-8CB8-03E58F004953}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TXDLib</RootNamespace>
-    <AssemblyName>TXDLib</AssemblyName>
+    <RootNamespace>Heavy.TXDLib</RootNamespace>
+    <AssemblyName>Heavy.TXDLib</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
