--- a/DFFViewer2/Heavy.DFFViewer.csproj
+++ b/DFFViewer2/Heavy.DFFViewer.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ViewModels\CameraViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\Point3DViewModel.cs" />
+    <Compile Include="ViewModels\Vector3DViewModel.cs" />
     <Compile Include="Views\CameraView.xaml.cs">
       <DependentUpon>CameraView.xaml</DependentUpon>
     </Compile>
