--- a/DFFViewer2/Heavy.DFFViewer.csproj
+++ b/DFFViewer2/Heavy.DFFViewer.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="VIBlend.WPF.Editors, Version=4.5.0.0, Culture=neutral, PublicKeyToken=5f568d4f9cd901f1" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -145,12 +146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\arrow_up.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\arrow_down.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
