--- a/DFFLib/Heavy.DFFLib.csproj
+++ b/DFFLib/Heavy.DFFLib.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -39,7 +40,6 @@
     <Compile Include="Sections\BinMeshPLGSection.cs" />
     <Compile Include="Sections\ClumpSection.cs" />
     <Compile Include="DFFSectionLoader.cs" />
-    <Compile Include="DFFTypes.cs" />
     <Compile Include="Sections\FrameListSection.cs" />
     <Compile Include="Sections\FrameSection.cs" />
     <Compile Include="Sections\GeometryListSection.cs" />
@@ -52,6 +52,11 @@
     <Compile Include="Sections\SpecularMaterialSection.cs" />
     <Compile Include="Sections\TextureSection.cs" />
     <Compile Include="Sections\UVAnimationPLGSection.cs" />
+    <Compile Include="Types\BoundingInformation.cs" />
+    <Compile Include="Types\Frame.cs" />
+    <Compile Include="Types\GeometryFlags.cs" />
+    <Compile Include="Types\GeometryLighting.cs" />
+    <Compile Include="Types\GeometryTriangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RWLib\Heavy.RWLib.csproj">
